--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@ body {
 	background: #dedede;
 	margin: 0;
 	padding: 0;
-	color: #656565;
+	color: #01B555;
 	text-shadow:0 0px, 1px 1px #FFFFFF;
 }
 a img { 
